# korean_spell_checker

./: .gitignore  LICENSE  README.md  pyproject.toml
korean_grammer/: korean_spell_checker.py
korean_spell_checker/: pnutest.py
