[project]
name = "korean-grammer"
version = "0.1.0"
description = ""
authors = [
    {name = "perhona",email = "perhona@kakao.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "pyperclip (>=1.9.0,<2.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "pyinstaller (>=6.13.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
